Bug 969222 - Don't find a new frame pointer unless the previous one was deleted. r=smaug